--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,55 @@
 @import url(./normalize.css);
 @import url(./reset.css);
 
-body{
-  background: yellow;
-  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+/*본문 스타일 */
+body {
+  background: #ffc;
+  font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui,
+    Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic',
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 }
 
-.header{
+/*레이아웃 */
+.header,
+.visual,
+.main,
+.slogan,
+.footer-inner {
+  width: 940px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+/* 헤더 */
+.header {
   background: pink;
+  padding: 0 30px;
+  height: 15vh;
 }
-.visual{
+
+/* 비주얼 */
+.visual {
   background: orange;
+  height: 10vh;
 }
-.main{
+
+/* 메인 */
+.main {
   background: lightgreen;
+  height: 50vh;
 }
-.slogan{
+
+/* 슬로건 */
+.slogan {
   background: skyblue;
+  height: 10vh;
 }
-.footer{
+
+/* 푸터 */
+.footer {
   background: gray;
+}
+
+.footer-inner {
+  height: 15vh;
+  background: silver;
 }
