--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+/*기본 스타일*/
+*, *::before, *::after{
+  box-sizing: border-box;
+}
 
 /*본문 스타일 */
 body {
@@ -16,7 +20,6 @@ body {
 .slogan,
 .footer-inner {
   width: 940px;
-  box-sizing: border-box;
   margin: 0 auto;
 }
 /* 헤더 */
@@ -36,12 +39,39 @@ body {
 .main {
   background: lightgreen;
   height: 50vh;
+  display:flow-root;
+  padding:0 15px; 
+}
+
+
+.clearfix{
+  clear: both;
+}
+
+.group{
+  margin: 0 15px;
+}
+.group1{
+  background-color: violet;
+  width:250px;
+  float: left;
+}
+.group2{
+  background-color: salmon;
+  width:380px;
+  float:left;
+}
+.group3{
+  background-color: gold;
+  width:190px;
+  float:left;
 }
 
 /* 슬로건 */
 .slogan {
   background: skyblue;
   height: 10vh;
+  clear:both;
 }
 
 /* 푸터 */
