--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,12 @@ body {
 /* 메인 */
 .main {
   background: lightgreen;
-  height: 50vh;
+  min-height: 450px;
   display:flex;
-  flex-direction: row;
-
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 30px;
 }
 
 
@@ -50,17 +52,17 @@ body {
 .group1{
   background-color: violet;
   width:250px;
-
+  
 }
 .group2{
   background-color: salmon;
   width:380px;
-
+  
 }
 .group3{
   background-color: gold;
-  width:190px;
-
+  width: 190px;
+  
 }
 
 /* 슬로건 */
