--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,15 @@
 *, *::before, *::after{
   box-sizing: border-box;
 }
+/* 링크 스타일 */
+a{
+  color:inherit;
+  text-decoration: none;
+}
 
 /*본문 스타일 */
 body {
+  color: #212121;
   background: #ccc;
   font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui,
     Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic',
@@ -35,14 +41,27 @@ body {
 .logo{
   position:absolute;
   top:45px;
-  bottom:60px;
+  left:60px;
 }
 
 /* 텍스트 링크 모음 */
 .member{
-  background-color: aqua;
+  /* background-color: aqua; */
+  text-align:right;
+  
 }
-
+.member li{
+  display:inline-block;
+  padding:4px 0;
+}
+.divider{
+  margin-right:4px;
+}
+.member a{
+  background-color: coral;
+  padding:6px 10px;
+  display:inherit;
+}
 
 /* 비주얼 */
 .visual {
