--- a/styles/style.css
+++ b/styles/style.css
@@ -1,25 +1,46 @@
 @import url(./normalize.css);
 @import url(./reset.css);
-/*기본 스타일*/
-*, *::before, *::after{
+
+/* 숨김 콘텐츠 */
+.a11y-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip-path: polygon(0 0, 0 0, 0 0);
+}
+
+/* 기본 스타일 */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
+html {
+  font-size: 10px;
+}
+
 /* 링크 스타일 */
-a{
-  color:inherit;
+a {
+  color: inherit;
   text-decoration: none;
 }
 
-/*본문 스타일 */
+/* 본문 스타일 */
 body {
+  /* em, rem 단위를 사용해보기 */
+  font-size: 1.4rem;
   color: #212121;
-  background: #ccc;
-  font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui,
-    Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic',
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+  background: #ccc
+    linear-gradient(to bottom, #ccc 0%, #eee 35%, #fff 70%, #fff 100%);
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
-/*레이아웃 */
+/* 레이아웃 */
 .header,
 .visual,
 .main,
@@ -28,39 +49,92 @@ body {
   width: 940px;
   margin: 0 auto;
 }
+
 /* 헤더 */
 .header {
   background: #fff;
   padding: 0 30px;
-  height: 15vh;
   border-radius: 0 0 15px 15px;
-  position:relative;
+  position: relative;
 }
 
 /* 로고 */
-.logo{
-  position:absolute;
-  top:45px;
-  left:60px;
+.logo {
+  position: absolute;
+  top: 45px;
+  left: 60px;
 }
 
 /* 텍스트 링크 모음 */
-.member{
-  /* background-color: aqua; */
-  text-align:right;
-  
+.member {
+  text-align: right;
+  padding: 4px 0;
+  /* position 속성을 활용하여 .member 영역을 오른쪽으로 10px 만큼 이동하기 */
+  /* position: relative;
+  right: -10px; */
+  /* transform 속성을 활용하여 .member 영역을 오른쪽으로 10px 만큼 이동하기 */
+  transform: translateX(10px);
 }
-.member li{
-  display:inline-block;
-  padding:4px 0;
+
+.member li {
+  display: inline-block;
 }
-.divider{
-  margin-right:4px;
+
+.member a {
+  padding: 6px 10px;
+  display: inherit;
+  text-transform: uppercase;
 }
-.member a{
-  background-color: coral;
-  padding:6px 10px;
-  display:inherit;
+
+/* 마지막 li 요소에 포함된 a 요소를 선택하여 오른쪽 padding 값을 0으로 재정의 하는 방법 */
+/* .member li:last-child a {
+  padding-right: 0;
+} */
+
+.divider {
+  margin-right: 4px;
+}
+
+/* 메인 메뉴 */
+.navigation {
+  padding-bottom: 80px;
+}
+
+.menu {
+  border-top: 2px solid currentColor;
+  background: #e85e2c
+    linear-gradient(
+      to bottom,
+      #ef9126 0%,
+      #e85e2c 35%,
+      #e85e2c 70%,
+      #ef9126 100%
+    );
+  border-radius: 0 0 5px 5px;
+  padding-left: 230px;
+  height: 47px;
+}
+
+.menu-item {
+  float: left;
+  border-left: 2px solid #fff;
+}
+
+.menu-button {
+  border: 0;
+  background: transparent;
+  padding: 0 23px;
+  line-height: 45px;
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
+}
+
+.sub-menu {
+  background-color: pink;
+  position: absolute;
+  display: none;
 }
 
 /* 비주얼 */
@@ -68,54 +142,44 @@ body {
   background: orange;
   height: 10vh;
 }
-
 /* 메인 */
 .main {
   background: lightgreen;
   height: 50vh;
-  display:flow-root;
-  padding:0 15px; 
+  display: flow-root;
+  padding: 0 15px;
 }
 
-
-.clearfix{
-  clear: both;
-}
-
-.group{
+.group {
   margin: 0 15px;
-}
-.group1{
-  background-color: violet;
-  width:250px;
   float: left;
 }
-.group2{
-  background-color: salmon;
-  width:380px;
-  float:left;
+
+.group1 {
+  background-color: violet;
+  width: 250px;
 }
-.group3{
+.group2 {
+  background-color: salmon;
+  width: 380px;
+}
+.group3 {
   background-color: gold;
-  width:190px;
-  float:left;
+  width: 190px;
 }
 
 /* 슬로건 */
 .slogan {
   background: skyblue;
   height: 10vh;
-  clear:both;
+  clear: both;
 }
-
 /* 푸터 */
 .footer {
-  background: gray;
+  background: #ccc
+    linear-gradient(to bottom, #ccc 0%, #eee 35%, #fff 70%, #fff 100%);
 }
-
 .footer-inner {
-  height: 15vh;
-  width:500px;
-  overflow:hidden;
   background: silver;
+  height: 15vh;
 }
