--- a/styles/style.css
+++ b/styles/style.css
@@ -115,9 +115,11 @@ body {
   padding-left: 230px;
   height: 47px;
 }
-
+.menu li{
+  float:left;
+}
 .menu-item {
-  float: left;
+  /* float: left; */
   border-left: 2px solid #fff;
 }
 
@@ -145,6 +147,10 @@ body {
   background-color: pink;
   position: absolute;
   display: none;
+}
+
+.is-active .sub-menu{
+  display:block;
 }
 
 /* 비주얼 */
