--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,6 @@
 
 /* 숨김 콘텐츠 */
 .a11y-hidden {
-  background-color: aqua;
   position: absolute;
   width: 1px;
   height: 1px;
@@ -64,6 +63,7 @@ body {
   position: absolute;
   top: 45px;
   left: 60px;
+  z-index: 10;
 }
 
 /* 텍스트 링크 모음 */
@@ -114,15 +114,19 @@ body {
   border-radius: 0 0 5px 5px;
   padding-left: 230px;
   height: 47px;
+  position: relative;
 }
-.menu li{
-  float:left;
+
+.menu > li:nth-child(-n + 3) {
+  position: relative;
 }
+
 .menu-item {
-  /* float: left; */
+  float: left;
   border-left: 2px solid #fff;
 }
 
+/* 구체성 -> 10점 */
 .menu-button {
   border: 0;
   background: transparent;
@@ -134,23 +138,45 @@ body {
   text-shadow: 1px 1px 0 #000, -1px -1px 0 #000;
 }
 
-.is-active .menu-button{
-  color: yellow;
+/* 구체성 -> 20점 */
+.is-active .menu-button {
+  color: #ff0;
 }
-.is-active .menu-button::after{
-  content:"";
-  background-color: aqua;
-  display:block;
-  border-top:2px solid black;
-} 
+
+.is-active .menu-button::after {
+  content: "";
+  display: block;
+  border-top: 2px solid #000;
+}
+
 .sub-menu {
   background-color: pink;
   position: absolute;
+  top: 47px;
   display: none;
 }
 
-.is-active .sub-menu{
-  display:block;
+.menu-html,
+.menu-css,
+.menu-standards {
+  left: 0;
+}
+
+.menu-accessibility,
+.menu-qna,
+.menu-archive {
+  right: 0;
+}
+
+.is-active .sub-menu {
+  display: block;
+  white-space: nowrap;
+}
+
+.sub-menu li {
+  display: inline-block;
+  padding-left: 1em;
+  background-color: gold;
 }
 
 /* 비주얼 */
