--- a/styles/style.css
+++ b/styles/style.css
@@ -378,27 +378,86 @@ body {
 .sign a::before {
   color: orangered;
 }
+
 /* 유효성 검사 배너 */
-.validation-list{
-  margin-top:25px;
-}
-.validation-list li{
-  margin-top:10px;
+.validation-list {
+  margin-top: 25px;
 }
 
-.validation-list a{
-  display:block;
-  background: url(images/validation_icon.png)no-repeat 25px 50%, #ccc linear-gradient(to bottom, #ccc, #eee);
-  padding:8px 15px 8px 45px;
-  border-radius:30px;
+.validation-list li {
+  margin-top: 10px;
+}
+
+.validation-list a {
+  background: url("./images/validation_icon.png") no-repeat 25px 50%,
+    #ccc linear-gradient(to bottom, #ccc, #eee);
+  padding: 0 15px 0 55px;
+  border-radius: 30px;
+  line-height: 30px;
   border: 1px solid #aaa;
-
+  cursor: pointer;
+  display: block;
 }
-
 
 .validation-list a:hover,
-.validation-list a:focus{
-  color:#f00;
+.validation-list a:focus {
+  color: #f00;
+}
+
+/* 웹 관련 용어 */
+.term {
+  margin-top: 20px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  padding: 10px 15px;
+  background: #ccc linear-gradient(to bottom, #ccc, #eee);
+}
+
+.term-title {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.term-list {
+  margin-top: 10px;
+}
+
+.term-list div {
+  margin-top: 10px;
+  display: flow-root;
+}
+
+.term-list-subject,
+.term-list-brief {
+  float: right;
+  width: 145px;
+}
+
+.term-list-subject {
+  color: #296897;
+  font-weight: 500;
+}
+
+.term-list-thumbnail {
+  float: left;
+}
+
+.term-list-thumbnail img {
+  vertical-align: middle;
+}
+
+.term-list-brief {
+  margin-top: 5px;
+  line-height: 1.5;
+}
+
+.cross .term-list-subject,
+.cross .term-list-brief {
+  float: left;
+}
+
+.cross .term-list-thumbnail {
+  float: right;
 }
 
 /* 슬로건 */
